Fixed blocky scrollbar

--- a/index.less
+++ b/index.less
@@ -184,6 +184,12 @@ atom-text-editor.is-focused .line-number.cursor-line-no-selection, atom-text-edi
 	color: @red-orange;
 }
 
+
+.vertical-scrollbar{
+	background: transparent;
+}
+
+
 @import "./styles/java.less";
 @import "./styles/css.less";
 @import "./styles/html.less";
